--- a/FindZombieHandles.csproj
+++ b/FindZombieHandles.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="NtApiDotNet" Version="1.1.33" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <TrimmerRootDescriptor Include="TrimAssemblyRoots.xml" />
+  </ItemGroup>
 </Project>
